--- a/style.css
+++ b/style.css
@@ -659,6 +659,7 @@ header {
 @media screen and (max-width: 900px) {
   .bg-text:after, .number-after-two:after, .number-after-three:after, .number-after-four:after, .number-after-five:after{
     font-size: 16rem;
+    top:80%;
   }
   .number-after-two{
     display: grid;
